--- a/web/week2/index.html
+++ b/web/week2/index.html
@@ -4,16 +4,15 @@
 <head>
     <title>JavaScript Basics</title>
     <link href=data:, rel=icon>
-    <script src='app.js' defer></script>
+    <script src='mrt.js' defer></script>
 </head>
 
 <body>
     <h1>JavaScript Basics</h1>
     <p>
-        Open the web inspector console to see the results of 
+        Open the web inspector console to see the results of
         the JavaScript that is executed on this page...
     </p>
 </body>
 
 </html>
-
