--- a/web/week3-task-set/index.html
+++ b/web/week3-task-set/index.html
@@ -11,9 +11,9 @@
 <body>
     <h1>Week 3 Task Set</h1>
 
-    <p>What is
-        <span id='num1'></span> + <span id='num2'></span>?
-    </p>
+    <div>
+        What is <span id='num1'></span> + <span id='num2'></span>?
+    </div>
 
 </body>
 
