--- a/web/week3-task-set/index.html
+++ b/web/week3-task-set/index.html
@@ -11,9 +11,22 @@
 <body>
     <h1>Week 3 Task Set</h1>
 
-    <div>
-        What is <span id='num1'></span> + <span id='num2'></span>?
-    </div>
+    <form>
+        <p>
+            Answer the following question as quickly and accurately as you can.
+        </p>
+
+        <p>
+            What is <span id='num1'></span> + <span id='num2'></span>?
+        </p>
+
+        <p>
+            <input type='text' name='problem'>
+            <button type='submit'>Submit</button>
+        </p>
+    </form>
+
+    <p id='results'></p>
 
 </body>
 
