--- a/web/lexical-decision/index.html
+++ b/web/lexical-decision/index.html
@@ -9,6 +9,8 @@
     <script src='https://unpkg.com/@jspsych/plugin-html-keyboard-response'></script>
 
     <script src='experiment.js'></script>
+    <script src='conditions.js'></script>
+
 
     <link href='https://unpkg.com/jspsych/css/jspsych.css' rel='stylesheet' type='text/css'>
 </head>
