--- a/web/week5-task-set/index.html
+++ b/web/week5-task-set/index.html
@@ -2,14 +2,15 @@
 <html>
 
 <head>
-    <title>Lexical Decision Task</title>
+    <title>Math Response Time Task</title>
     <link href=data:, rel=icon>
 
     <script src='https://unpkg.com/jspsych'></script>
     <script src='https://unpkg.com/@jspsych/plugin-html-keyboard-response'></script>
+    <script src='https://unpkg.com/@jspsych/plugin-survey-html-form'></script>
 
-    <script src='experiment.js'></script>
     <script src='conditions.js'></script>
+    <script src='experiment.js'></script>
 
     <link href='https://unpkg.com/jspsych/css/jspsych.css' rel='stylesheet' type='text/css'>
 </head>
