--- a/web/week6-task-set/index.html
+++ b/web/week6-task-set/index.html
@@ -5,15 +5,19 @@
     <title>Week 6 Task Set</title>
     <link href=data:, rel=icon>
 
+    <link href='https://unpkg.com/jspsych/css/jspsych.css' rel='stylesheet' type='text/css'>
+    <link href='styles.css' rel='stylesheet' type='text/css'>
+
+
     <script src='https://unpkg.com/jspsych'></script>
     <script src='https://unpkg.com/@jspsych/plugin-html-keyboard-response'></script>
     <script src='https://unpkg.com/@jspsych/plugin-survey-html-form'></script>
     <script src='https://unpkg.com/@jspsych/plugin-html-button-response'></script>
 
+
     <script src='conditions.js'></script>
     <script src='experiment.js'></script>
 
-    <link href='https://unpkg.com/jspsych/css/jspsych.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body></body>
