--- a/web/week6-task-set/index.html
+++ b/web/week6-task-set/index.html
@@ -13,6 +13,7 @@
     <script src='https://unpkg.com/@jspsych/plugin-html-keyboard-response'></script>
     <script src='https://unpkg.com/@jspsych/plugin-survey-html-form'></script>
     <script src='https://unpkg.com/@jspsych/plugin-html-button-response'></script>
+    <script src='https://unpkg.com/@jspsych/plugin-survey-likert'></script>
 
 
     <script src='conditions.js'></script>
