--- a/web/IAT/index.html
+++ b/web/IAT/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>IAT</title>
+    <title>Political IAT</title>
     <link href=data:, rel=icon>
 
     <link href='https://unpkg.com/jspsych/css/jspsych.css' rel='stylesheet' type='text/css'>
@@ -11,7 +11,9 @@
 
     <script src='https://unpkg.com/jspsych'></script>
     <script src='https://unpkg.com/@jspsych/plugin-html-keyboard-response'></script>
+    <script src='https://unpkg.com/@jspsych/plugin-html-button-response'></script>
 
+    <script src='conditions.js'></script>
     <script src='experiment.js'></script>
 </head>
 
