--- a/web/lexical-decision/index.html
+++ b/web/lexical-decision/index.html
@@ -5,13 +5,20 @@
     <title>Lexical Decision Task</title>
     <link href=data:, rel=icon>
 
-    <script src='https://unpkg.com/jspsych'></script>
-    <script src='https://unpkg.com/@jspsych/plugin-html-keyboard-response'></script>
+    <link href='https://unpkg.com/jspsych/css/jspsych.css' rel='stylesheet' type='text/css'>
+    <link href='style.css' rel='stylesheet' type='text/css'>
 
+    <script src='https://unpkg.com/jspsych'></script>
+    <script src='https://unpkg.com/@jspsych/plugin-fullscreen'></script>
+    <script src='https://unpkg.com/@jspsych/plugin-html-keyboard-response'></script>
+    <script src='https://unpkg.com/@jspsych/plugin-survey-html-form'></script>
+    <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe"></script>
+
+
+    <script src='style.css'></script>
     <script src='conditions.js'></script>
     <script src='experiment.js'></script>
 
-    <link href='https://unpkg.com/jspsych/css/jspsych.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body></body>
